tests/src/test/resources/scala/tools/nsc/effects/io/ClassesSuite-files/constructorInferenceNeg.check
newSource:4: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t1: C1 @pure = new C1()
                     ^
newSource:5: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t2: C2 @pure = new C2()
                     ^
newSource:6: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t3: C3 @pure = new C3()
                     ^
newSource:7: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t4: C4 @pure = new C4()
                     ^
newSource:8: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t5: C5 @pure = new C5(1)
                     ^
newSource:9: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t6: C6 @pure = new C6()
                     ^
newSource:10: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t7: C7 @pure = new C7(10)
                     ^
newSource:14: error: effect type mismatch;
 found   : @io
 required: @noIo
  def compObj: Cc.type @pure = Cc
                               ^
newSource:15: error: effect type mismatch;
 found   : @io
 required: @noIo
  def toStr: String @pure = Cc.toString
                            ^
newSource:16: error: effect type mismatch;
 found   : @io
 required: @noIo
  def mkC: Cc @pure = Cc(1)
                      ^
newSource:16: error: effect type mismatch;
 found   : @io
 required: @noIo
  def mkC: Cc @pure = Cc(1)
                        ^
newSource:17: error: effect type mismatch;
 found   : @io
 required: @noIo
  def testF: Int @pure = Cc.f
                         ^
newSource:18: error: effect type mismatch;
 found   : @io
 required: @noIo
  def ccConstr: Cc @pure = new Cc(10)
                           ^
newSource:64: error: effect type mismatch;
 found   : @io
 required: @noIo
  def foo: Int @pure = tee.x
                       ^
newSource:80: error: illegal cyclic reference involving constructor D3
    new D3(10)
    ^
newSource:85: error: too many arguments for constructor D6: ()D6
  def this(x: Int) = this(1)
                     ^
